versione finale  1.0